Fixed double scroll in Google Chrome and added page for recover password

--- a/src/components/DoctorsCard/doctor-cards.scss
+++ b/src/components/DoctorsCard/doctor-cards.scss
@@ -53,6 +53,7 @@
     button{
       margin: 20px auto;
       display: block;
+      cursor: pointer;
     }
   }
   &__name{
