--- a/src/components/HelpForm/help-form.scss
+++ b/src/components/HelpForm/help-form.scss
@@ -22,7 +22,7 @@
   }
 
   textarea{
-    margin-bottom: 0;
+    margin-bottom: -21px;
   }
 
   label{
@@ -46,6 +46,7 @@
     margin: 52px 0 auto;
     display: inline-block;
     font-weight: 900;
+    cursor: pointer;
   }
 
   h4{
