--- a/src/components/SearchResult/search-result.scss
+++ b/src/components/SearchResult/search-result.scss
@@ -347,7 +347,6 @@ label {
 .random_results{
   width: 50%;
   height: 620px;
-  overflow: scroll;
   margin-bottom: -80px;
 
   @media (max-width: 1230px) {
